# arch-wiki-mcp

./: .gitignore  .markdownlint.jsonc  AGENTS.md  ARCH_WIKI_MCP_CONSTITUTION.md  CHANGELOG.md  LICENSE  MCP_PROTOCOL.md  MCP_SETUP.md  MEDIAWIKI_API_AUDIT.md  Makefile  README.md  TEST_STRATEGY.md  extractor.py  proof_of_life.py  pyproject.toml  server.py  test_extractor.py  test_server.py
.github/workflows/: release.yml  tests.yml
scripts/: live_audit.py  proof_of_life.py
src/: __init__.py  extractor.py  mcp_server.py
src/arch_wiki_mcp/: __init__.py  cli.py  extractor.py  protocol.py  registration.py  server.py  tools.py
tests/: conftest.py  record_fixtures.py  test_admonition_aliases.py  test_check_registration.py  test_commands_golden.py  test_content_shapes.py  test_contract.py  test_extractor.py  test_failures.py  test_identity.py  test_links_golden.py  test_live_audit_guard.py  test_mcp.py  test_revision_urls.py  test_section_render_golden.py  test_setup_docs.py  test_siteinfo.py  test_url_parsing.py  test_warnings_golden.py  test_wikitext_parsing.py
tests/fixtures/: parse_GRUB.json  parse_Installation_guide.json  parse_Installation_guide__Español_.json  parse_Installation_guide__Français_.json  parse_Iwd.json  parse_KDE.json  parse_Nonexistent_page_xyz.json  parse_Pacman.json  parse_Systemd.json  parse_Transcluded_example.json  parse_Users_and_groups.json  query_C__.json  query_GRUB.json  query_Iwd__简体中文_.json  query_aliases_GRUB.json  query_aliases_Installation_guide.json  query_aliases_Installation_guide__Español_.json  query_aliases_Installation_guide__Français_.json  query_aliases_Iwd.json  query_aliases_KDE.json  query_aliases_Pacman.json  query_aliases_Systemd.json  query_aliases_Users_and_groups.json  query_aliasrevs_Installation_guide__Français_.json  query_nearmatch_C__.json  query_nearmatch_GRUB.json  query_nearmatch_Iwd__简体中文_.json  query_nearmatch_wifi_not_working.json  query_siteinfo.json  query_wifi_not_working.json  query_zzzqqxnotathing.json
