[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arch-wiki-mcp"
version = "2.0.0"
description = "Arch Wiki MCP Server - A Truth Perimeter for AI"
authors = [
    { name = "egarcia74" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

keywords = ["mcp", "arch-linux", "arch-wiki", "provenance", "citation", "llm", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]

# The PyPI page is the first thing a stranger reads. Every one of these must resolve.
[project.urls]
Homepage = "https://github.com/egarcia74/arch-wiki-mcp"
Changelog = "https://github.com/egarcia74/arch-wiki-mcp/blob/master/CHANGELOG.md"
Issues = "https://github.com/egarcia74/arch-wiki-mcp/issues"
Setup = "https://github.com/egarcia74/arch-wiki-mcp/blob/master/MCP_SETUP.md"

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
arch-wiki-mcp = "arch_wiki_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

# PEP 561: without this marker a consumer's type checker ignores every annotation we
# ship, so the "Typing :: Typed" classifier above would advertise a capability the
# artifact does not have -- to every stranger who reads the PyPI page, permanently.
[tool.setuptools.package-data]
"arch_wiki_mcp" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
# The package lives under src/, so it is importable in development without an
# install and without a sys.path.insert in the source -- which is what the two
# modules used to carry, purely so they could import their own package when run
# as scripts.
pythonpath = ["src", "tests"]

# A parametrized test over an empty set is skipped, not failed -- and a skip inside a
# green run reads exactly like a pass. Several guards here are parametrized over sets
# they *derive* (the documented output fields, the tracked documents), so a set that
# quietly empties takes its guard with it and the suite goes on reporting success.
# contract_fields() is the live one: it subtracts a hand-maintained "self-explanatory"
# whitelist from the declared fields, and adding names to that whitelist is exactly
# what a contributor does to quiet a failing contract test. Whitelist the last of them
# and the guard that swears no field reaches an agent undocumented stops running at all.
#
# A guard over nothing must be an error, not a quiet green.
empty_parameter_set_mark = "fail_at_collect"

[tool.coverage.run]
source = ["arch_wiki_mcp"]

[tool.pyright]
# src/    -- the package lives under a src layout, so it is not on the default path.
# scripts/ and tests/ -- reached through sys.path.insert (a script bootstrapping the
#          project) or by pytest's own pythonpath, neither of which a static checker
#          can follow. Name the paths rather than silence the imports.
extraPaths = ["src", "scripts", "tests"]
